--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "bootstrap-css-only": "^4.3.1",
     "core-js": "^2.5.4",
+    "date-fns": "^2.7.0",
     "express": "^4.17.1",
     "oidc-client": "^1.9.1",
     "rxjs": "~6.5.3",
