--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
-    "bootstrap-css-only": "^4.3.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "date-fns": "^2.7.0",
     "express": "^4.17.1",
